--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   },
   "homepage": "https://github.com/Sasarna/Course-Sebsite-and-Smart-Edu#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "ejs": "^3.1.10",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "mongoose": "^8.8.4",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
-  }
+  },
+  "keywords": []
 }
