--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "homepage": "https://github.com/Sasarna/Course-Sebsite-and-Smart-Edu#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "mongoose": "^8.8.4",
     "nodemailer": "^6.10.0",
     "slugify": "^1.6.6"
